@startuml er
skinparam defaultFontName "Noto Sans CJK JP"

package "Authentication" {

  entity "User" as User {
    +id <<PK>>
    username <<UNIQUE>>
    email
    password
    name
  }

}

package "Dataset Domain" {

  entity "Dataset" as Dataset {
    +id <<PK>>
    public_id <<UUID, UNIQUE>>

    owner <<FK, nullable>>
    anonymous_id <<UUID, nullable>>

    name
    source_file

    status
    visibility

    schema <<JSON>>
    parse_result <<JSON, nullable>>

    expires_at <<nullable>>
    created_at
  }

  entity "DataPoint" as DataPoint {
    +id <<PK>>

    dataset <<FK>>

    raw_time
    time <<nullable>>

    entity
    metric
    value

    order_index

    <<UNIQUE(dataset, entity, metric, raw_time)>>
  }

  User ||--o{ Dataset : owner
  Dataset ||--o{ DataPoint : dataset

}

note bottom of Dataset
owner XOR anonymous_id
end note

@enduml